--- a/tex/body.tex
+++ b/tex/body.tex
@@ -1,5 +1,4 @@
-\import{sections/introduction}{intro.tex}
-\import{sections/preliminaries}{preliminaries.tex}
-\import{sections/nipopows_hard_fork/}{nipopows_hard_fork.tex}
-\import{sections/nipopows_velvet_fork/}{nipopows_velvet_fork.tex}
-%\import{sections/flyclient_velvet/}{flyclient_velvet.tex}
+\import{chapters/introduction}{intro.tex}
+\import{chapters/background}{background.tex}
+\import{chapters/nipopows_hard_fork/}{nipopows_hard_fork.tex}
+\import{chapters/nipopows_velvet_fork/}{nipopows_velvet_fork.tex}
