--- a/tex/preamble.sty
+++ b/tex/preamble.sty
@@ -1,7 +1,13 @@
 \ProvidesPackage{preamble}
 
+\usepackage[a4paper, total={6in, 9in}]{geometry}
+\usepackage[colorlinks=true,citecolor=magenta,linkcolor=blue]{hyperref}
+\usepackage[utf8]{inputenc}
+\usepackage[greek,english]{babel}
+\usepackage{alphabeta}
+
 \usepackage{import}
-% \usepackage[linesnumbered,ruled]{algorithm2e}
+
 \usepackage{amsthm}
 
 \usepackage{graphicx}
