--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -1,22 +1,23 @@
-\documentclass[10pt,a4paper]{article}
-\usepackage[utf8]{inputenc}
-\usepackage[a4paper, total={6in, 9in}]{geometry}
-\usepackage[colorlinks=true,citecolor=magenta,linkcolor=blue]{hyperref}
+\documentclass[10pt,a4paper]{book}
 
 \usepackage{preamble}
+
 \begin{document}
 
 \import{./}{title.tex}
 
-%\tableofcontents
+\clearpage\maketitle
+\thispagestyle{empty}
+
+\import{chapters/abstract}{abstract.tex}
+
+\tableofcontents
 
 \input{body}
 
-\newpage
 \listoffigures
 
 \bibliographystyle{plain} % We choose the "plain" reference style
-\newpage
 \bibliography{refs} % Entries are in the "refs.bib" file
 
 \end{document}
