--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,6 +1,23 @@
-\begin{center}
-\begin{Large}
-\textbf{NIPoPoWs under Velvet Fork\\}
-\end{Large}
+\title{
+    {\includegraphics[scale=0.8]{figures/logo_uoa.jpg}}\\
+    {\large National and Kapodistrian University of Athens \\ 
+    School of Science \\ 
+    Department of Informatics and Telecommunications}\\
+    \vspace{1cm}
+    Postgraduate Studies \\ 
+    Computer Systems: Software and Hardware\\
+    \vspace{10mm}
+    {Master Thesis}\\
+    \vspace{3mm}
+    {\textbf{\LARGE Superlight Blockchain Client under Velvet Fork}}\\
+    \vspace{1cm}
+    }
 
-\end{center}
+\author{
+    \textbf{Andrianna I. Polydouri} \\ 
+    \vspace{1cm} \\ 
+    \textbf{Supervisor: Aggelos Kiayias}, Professor NKUA
+    \vspace{2cm}
+}
+
+\date{Athens, \\ 1st June 2020}
