Try a new title

--- a/tex/title.tex
+++ b/tex/title.tex
@@ -9,7 +9,7 @@
     \vspace{10mm}
     {Master Thesis}\\
     \vspace{3mm}
-    {\textbf{\LARGE Superlight Blockchain Client under Velvet Fork}}\\
+    {\textbf{\LARGE A Study on Superlight Blockchain Clients under Velvet Fork}}\\
     \vspace{1cm}
     }
 
