--- a/tex/title.tex
+++ b/tex/title.tex
@@ -16,7 +16,9 @@
 \author{
     \textbf{Andrianna I. Polydouri} \\ 
     \vspace{1cm} \\ 
-    \textbf{Supervisor: Aggelos Kiayias}, Professor NKUA
+    \textbf{Supervisors: Aggelos Kiayias}, Professor NKUA\\
+    \hspace{3.68cm}
+    \textbf{Dionysis Zindros}, PhD Student NKUA
     \vspace{2cm}
 }
 
