Add bibliography and list of figures in ToC

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -15,8 +15,12 @@
 
 \input{body}
 
+\cleardoublepage
+\addcontentsline{toc}{chapter}{\listfigurename}
 \listoffigures
 
+\cleardoublepage
+\addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{plain} % We choose the "plain" reference style
 \bibliography{refs} % Entries are in the "refs.bib" file
 
