--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -282,5 +282,12 @@
   title={Analysis of nakamoto consensus},
   author={Ling Ren},
   year={2019},
-  institution={Cryptology ePrint Archive, Report 2019/943, 2019.}
+  institution={Cryptology ePrint Archive, Report 2019/943, 2019.}}
+
+@book{katz_lindell,
+  author = {Katz, Jonathan and Lindell, Yehuda},
+  title = {Introduction to Modern Cryptography (Chapman \& Hall/Crc Cryptography and Network Security Series)},
+  year = {2007},
+  isbn = {1584885513},
+  publisher = {Chapman \& Hall/CRC}
 }
