--- a/tex/body.tex
+++ b/tex/body.tex
@@ -2,3 +2,4 @@
 \import{chapters/background}{background.tex}
 \import{chapters/nipopows_hard_fork/}{nipopows_hard_fork.tex}
 \import{chapters/nipopows_velvet_fork/}{nipopows_velvet_fork.tex}
+\import{chapters/flyclient_velvet/}{flyclient_velvet.tex}
