--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -21,7 +21,7 @@
 
 \cleardoublepage
 \addcontentsline{toc}{chapter}{Bibliography}
-\bibliographystyle{plain} % We choose the "plain" reference style
-\bibliography{refs} % Entries are in the "refs.bib" file
+\bibliographystyle{plain}
+\bibliography{refs}
 
 \end{document}
