--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -8,6 +8,16 @@
 
 \clearpage\maketitle
 \thispagestyle{empty}
+\pagebreak
+
+\thispagestyle{empty}
+\input{greek_title.tex}
+\pagebreak
+\thispagestyle{empty}
+\input{subtitle.tex}
+\pagebreak
+\thispagestyle{empty}
+\input{greek_subtitle.tex}
 
 \import{chapters/abstract}{abstract.tex}
 
