--- a/tex/title.tex
+++ b/tex/title.tex
@@ -1,10 +1,10 @@
 \title{
     {\includegraphics[scale=0.8]{figures/logo_uoa.jpg}}\\
-    {\large National and Kapodistrian University of Athens \\ 
-    School of Science \\ 
+    {\large National and Kapodistrian University of Athens \\
+    School of Science \\
     Department of Informatics and Telecommunications}\\
     \vspace{1cm}
-    Postgraduate Studies \\ 
+    Postgraduate Studies \\
     Computer Systems: Software and Hardware\\
     \vspace{10mm}
     {Master Thesis}\\
@@ -14,8 +14,8 @@
     }
 
 \author{
-    \textbf{Andrianna I. Polydouri} \\ 
-    \vspace{1cm} \\ 
+    \textbf{Andrianna Polydouri} \\
+    \vspace{1cm} \\
     \textbf{Supervisors: Aggelos Kiayias}, Professor NKUA\\
     \hspace{3.68cm}
     \textbf{Dionysis Zindros}, PhD Student NKUA
