--- a/tex/subtitle.tex
+++ b/tex/subtitle.tex
@@ -13,7 +13,7 @@
         \textbf{Aggelos Kiayias}, Professor NKUA\\
         %\hspace{2.6cm}
         \hspace{2cm}
-        \textbf{Dionysis Zindros}, PhD Student NKUA
+        \textbf{Dionysis Zindros}, PhD NKUA
 
         \textbf{Thesis Committee:}\\ 
         \hspace{2cm}
