--- a/tex/title.tex
+++ b/tex/title.tex
@@ -18,7 +18,7 @@
     \vspace{1cm} \\
     \textbf{Supervisors: Aggelos Kiayias}, Professor NKUA\\
     \hspace{3.68cm}
-    \textbf{Dionysis Zindros}, PhD Student NKUA
+    \textbf{Dionysis Zindros}, PhD NKUA
     \vspace{2cm}
 }
 
