Minors in titles

--- a/tex/greek_title.tex
+++ b/tex/greek_title.tex
@@ -18,11 +18,11 @@
 
     \textbf{\large Ανδριάννα Πολυδούρη} \\ 
     \vspace{2.5cm} 
-    \textbf{\large Επιβλέποντες: Άγγελος Κιαγιάς}\large , Καθηγητής ΕΚΠΑ\\
-    \hspace{5.4cm}
+    \textbf{\large Επιβλέποντες: Άγγελος Κιαγιάς}\large , Αναπληρωτής Καθηγητής ΕΚΠΑ\\
+    \hspace{2.99cm}
     \textbf{\large Διονύσης Ζήνδρος} \large, Υποψήφιος Διδάκτωρ ΕΚΠΑ
     \vspace{2cm}
 
-    \date{Αθήνα, \\ 1η Ιουνίου 2020}
+    \date{Αθήνα, \\ 15η Ιουνίου 2020}
     \pagebreak
 \end{center}
