--- a/tex/subtitle.tex
+++ b/tex/subtitle.tex
@@ -10,17 +10,19 @@
     \begin{flushleft}
         \textbf{Supervisors:}\\ 
         \hspace{2cm}
-        \textbf{Aggelos Kiayias}, Professor NKUA\\
+        \textbf{Aggelos Kiayias}, Associate Professor NKUA\\
         %\hspace{2.6cm}
         \hspace{2cm}
         \textbf{Dionysis Zindros}, PhD NKUA
 
         \textbf{Thesis Committee:}\\ 
         \hspace{2cm}
-        \textbf{Aggelos Kiayias}, Professor NKUA\\
+        \textbf{Aggelos Kiayias}, Associate Professor NKUA\\
         %\hspace{3.97cm}
         \hspace{2cm}
-        \textbf{Yannis Smaragdakis}, Associate Professor NKUA
+        \textbf{Mema Roussopoulos}, Associate Professor NKUA\\
+        \hspace{2cm}
+        \textbf{Yannis Smaragdakis}, Professor NKUA
 
     \end{flushleft}
 \end{center}
