--- a/tex/title.tex
+++ b/tex/title.tex
@@ -16,10 +16,10 @@
 \author{
     \textbf{Andrianna Polydouri} \\
     \vspace{1cm} \\
-    \textbf{Supervisors: Aggelos Kiayias}, Professor NKUA\\
-    \hspace{3.68cm}
+    \textbf{Supervisors: Aggelos Kiayias}, Associate Professor NKUA\\
+    \hspace{0.31cm}
     \textbf{Dionysis Zindros}, PhD NKUA
     \vspace{2cm}
 }
 
-\date{Athens, \\ 1st June 2020}
+\date{Athens, \\ 15th June 2020}
