--- a/tex/greek_subtitle.tex
+++ b/tex/greek_subtitle.tex
@@ -11,17 +11,19 @@
     \begin{flushleft}
         \textbf{Επιβλέποντες:}\\ 
         \hspace{2cm}
-        \textbf{Άγγελος Κιαγιάς}, Καθηγητής ΕΚΠΑ\\
+        \textbf{Άγγελος Κιαγιάς}, Αναπληρωτής Καθηγητής ΕΚΠΑ\\
         %\hspace{3.15cm}
         \hspace{2cm}
         \textbf{Διονύσης Ζήνδρος}, Υποψήφιος Διδάκτωρ ΕΚΠΑ
 
         \textbf{Εξεταστική Επιτροπή:}\\ 
         \hspace{2cm}
-        \textbf{Άγγελος Κιαγιάς}, Καθηγητής ΕΚΠΑ\\
+        \textbf{Άγγελος Κιαγιάς}, Αναπληρωτής Καθηγητής ΕΚΠΑ\\
         %\hspace{4.4cm}
         \hspace{2cm}
-        \textbf{Γιάννης Σμαραγδάκης}, Αναπληρωτής Καθηγητής ΕΚΠΑ
+        \textbf{Μέμα Ρουσσοπούλου}, Αναπληρώτρια Καθηγήτρια ΕΚΠΑ\\
+        \hspace{2cm}
+        \textbf{Γιάννης Σμαραγδάκης}, Καθηγητής ΕΚΠΑ
 
     \end{flushleft}
 \end{center}
