Minors in titles

--- a/tex/greek_subtitle.tex
+++ b/tex/greek_subtitle.tex
@@ -14,7 +14,7 @@
         \textbf{Άγγελος Κιαγιάς}, Αναπληρωτής Καθηγητής ΕΚΠΑ\\
         %\hspace{3.15cm}
         \hspace{2cm}
-        \textbf{Διονύσης Ζήνδρος}, Υποψήφιος Διδάκτωρ ΕΚΠΑ
+        \textbf{Διονύσης Ζήνδρος}, Διδάκτωρ ΕΚΠΑ
 
         \textbf{Εξεταστική Επιτροπή:}\\ 
         \hspace{2cm}
