--- a/tex/greek_title.tex
+++ b/tex/greek_title.tex
@@ -3,7 +3,7 @@
     \includegraphics[scale=0.8]{figures/logo_uoa.jpg}\\
     {\large Εθνικό και Καποδιστριακό Πανεπιστήμιο Αθηνών \\ 
     Σχολή Θετικών Επιστημών \\ 
-    Τμήμα Πληροφορικής κ' Τηλεπικοινωνιών\\}
+    Τμήμα Πληροφορικής και Τηλεπικοινωνιών\\}
     \vspace{1cm}
     \begin{LARGE}
         Μεταπτυχιακές Σπουδές \\ 
@@ -23,6 +23,6 @@
     \textbf{\large Διονύσης Ζήνδρος}\large, Διδάκτωρ ΕΚΠΑ
     \vspace{2cm}
 
-    \date{Αθήνα, \\ 15η Ιουνίου 2020}
+    \date{Αθήνα, \\ Ιούνιος 2020}
     \pagebreak
 \end{center}
