--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -20,6 +20,7 @@
 \input{greek_subtitle.tex}
 
 \import{chapters/abstract}{abstract.tex}
+\import{chapters/acknowledgements}{acknowledgements.tex}
 
 \tableofcontents
 
