Official and ugly di format

--- a/greek_subtitle.tex
+++ b/greek_subtitle.tex
@@ -3,7 +3,7 @@
     \large \textbf{Διπλωματική Εργασία}\\
     \vspace{3cm}
     \textbf{Υπερελαφρείς Πελάτες Αλυσίδας υπό \\
-    ``Βελούδινη'' Aναβάθμιση Πρωτοκόλλου}\\
+    ``Βελούδινη'' Αναβάθμιση Πρωτοκόλλου}\\
     \vspace{3cm}
     \large \textbf{Ανδριάννα Πολυδούρη}\\
     \textbf{Αρ. Μητρώου:} M1598
