--- a/title.tex
+++ b/title.tex
@@ -1,25 +1,25 @@
 \title{
     {\includegraphics[scale=0.8]{figures/logo_uoa.jpg}}\\
-    {\large National and Kapodistrian University of Athens \\
-    School of Science \\
-    Department of Informatics and Telecommunications}\\
-    \vspace{1cm}
-    Postgraduate Studies \\
-    Computer Systems: Software and Hardware\\
+    {\Large \textbf{National and Kapodistrian University of Athens}} \\
+    {\large \textbf{School of Science \\
+    Department of Informatics and Telecommunications}}\\
+    \vspace{0.4cm}
+    \textbf{\large Postgraduate Studies}\\
+    \textbf{\large Computer Systems: Software and Hardware}\\
     \vspace{10mm}
-    {Master Thesis}\\
+    {\Large \textbf{MASTER THESIS}}\\
     \vspace{3mm}
     {\textbf{\LARGE A Study on Superlight Blockchain Clients under Velvet Fork}}\\
-    \vspace{1cm}
+    \vspace{0.8cm}
     }
 
 \author{
     \textbf{Andrianna Polydouri} \\
-    \vspace{1cm} \\
+    \vspace{0.8cm} \\
     \textbf{Supervisors: Aggelos Kiayias}, Associate Professor NKUA\\
-    \hspace{0.30cm}
+    \hspace{0.35cm}
     \textbf{Dionysis Zindros}, PhD NKUA
-    \vspace{2cm}
+    \vspace{0.7cm}
 }
 
-\date{Athens, \\ June 2020}
+\date{\textbf{Athens, \\ June 2020}}
