--- a/preamble.sty
+++ b/preamble.sty
@@ -1,10 +1,27 @@
 \ProvidesPackage{preamble}
 
-\usepackage[a4paper, total={6in, 9in}]{geometry}
-\usepackage[colorlinks=true,citecolor=magenta,linkcolor=blue]{hyperref}
+\usepackage[a4paper, total={6.5in, 9in}]{geometry}
+\usepackage[colorlinks=true,citecolor=black,linkcolor=black]{hyperref}
 \usepackage[utf8]{inputenc}
-\usepackage[greek,english]{babel}
+%\usepackage[greek,english]{babel}
+%
+%\usepackage[LGR,T1]{fontenc}
+%\usepackage{uarial}
+%\renewcommand{\familydefault}{\sfdefault}
+
+\usepackage{xltxtra}
+\usepackage{polyglossia}
+%\setdefaultlanguage{greek}
+\setmainfont{Arial} % put your font of choice right here
+\newfontfamily\greekfont{Linux Libertine O}
+\newfontfamily\greekfontsf{Linux Libertine O}
 \usepackage{alphabeta}
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\lhead{\small A Study on Superlight Clients under Velvet Fork}
+\lfoot{\small Andrianna Polydouri \hspace{0.9cm} p. \thepage}
 
 \usepackage{import}
 
