More stupid changes

--- a/greek_subtitle.tex
+++ b/greek_subtitle.tex
@@ -1,11 +1,11 @@
 \begin{center}
     \vspace{3cm}
-    \large \textbf{Διπλωματική Εργασία}\\
+    \large \textbf{ΔΙΠΛΩΜΑΤΙΚH ΕΡΓΑΣIΑ}\\
     \vspace{3cm}
-    \textbf{Υπερελαφρείς Πελάτες Αλυσίδας υπό \\
-    ``Βελούδινη'' Αναβάθμιση Πρωτοκόλλου}\\
+    Υπερελαφρείς Πελάτες Αλυσίδας υπό \\
+    ``Βελούδινη'' Αναβάθμιση Πρωτοκόλλου\\
     \vspace{3cm}
-    \large \textbf{Ανδριάννα Πολυδούρη}\\
+    \large \textbf{Ανδριάννα I. Πολυδούρη}\\
     \textbf{Αρ. Μητρώου:} M1598
  
     \begin{flushleft}
