--- a/subtitle.tex
+++ b/subtitle.tex
@@ -1,10 +1,10 @@
 \begin{center}
     \vspace{3cm}
-    \large \textbf{Master Thesis}\\
+    \large \textbf{MASTER THESIS}\\
     \vspace{3cm}
-    \textbf{A Study on Superlight Blockchain Clients under Velvet Fork}\\
+    A Study on Superlight Blockchain Clients under Velvet Fork\\
     \vspace{3cm}
-    \large \textbf{Andrianna Polydouri}\\
+    \large \textbf{Andrianna I. Polydouri}\\
     \textbf{Reg.Nr.:} M1598
  
     \begin{flushleft}
