--- a/thesis.tex
+++ b/thesis.tex
@@ -24,7 +24,7 @@
 \addcontentsline{toc}{chapter}{\listfigurename}
 \emptypage\listoffigures
 
-\pagestyle{plain}
+\pagestyle{fancy}
 \input{body}
 
 \cleardoublepage
