--- a/title.tex
+++ b/title.tex
@@ -1,5 +1,5 @@
 \title{
-    {\includegraphics[scale=0.8]{figures/logo_uoa.jpg}}\\
+    {\includegraphics[scale=0.7]{figures/logo_uoa.jpg}}\\
     {\Large \textbf{National and Kapodistrian University of Athens}} \\
     {\large \textbf{School of Science \\
     Department of Informatics and Telecommunications}}\\
@@ -7,19 +7,20 @@
     \textbf{\large Postgraduate Studies}\\
     \textbf{\large Computer Systems: Software and Hardware}\\
     \vspace{10mm}
-    {\Large \textbf{MASTER THESIS}}\\
+    {\large \textbf{MASTER THESIS}}\\
     \vspace{3mm}
-    {\textbf{\LARGE A Study on Superlight Blockchain Clients under Velvet Fork}}\\
+    {\textbf{\Large A Study on Superlight Blockchain Clients under Velvet Fork}}\\
     \vspace{0.8cm}
     }
 
 \author{
-    \textbf{Andrianna Polydouri} \\
+    \textbf{\normalsize Andrianna I. Polydouri} \\
     \vspace{0.8cm} \\
-    \textbf{Supervisors: Aggelos Kiayias}, Associate Professor NKUA\\
+    \textbf{\normalsize Supervisors: Aggelos Kiayias}, \normalsize Associate Professor NKUA\\
     \hspace{0.35cm}
-    \textbf{Dionysis Zindros}, PhD NKUA
+    \textbf{\normalsize Dionysis Zindros}, \normalsize PhD NKUA
     \vspace{0.7cm}
 }
 
-\date{\textbf{Athens, \\ June 2020}}
+\date{\normalsize \textbf{ATHENS \\ JUNE 2020}}
+\pagebreak
