--- a/preamble.sty
+++ b/preamble.sty
@@ -28,7 +28,10 @@
 
 \usepackage{titlesec, blindtext}
 \newcommand{\hsp}{\hspace{20pt}}
-\titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter{.}\hsp}{0pt}{\Huge\bfseries}
+\titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter{.}\hsp}{0pt}{\Huge\bfseries\MakeUppercase}
+
+\usepackage{caption}
+\captionsetup[figure]{font=small,labelfont=bf,textfont={bf,bf}}
 
 \usepackage{import}
 
