--- a/thesis.tex
+++ b/thesis.tex
@@ -21,6 +21,7 @@
 
 \emptypage\tableofcontents
 
+\def\listfigurename{\textsc{List of Figures}}
 \addcontentsline{toc}{chapter}{\listfigurename}
 \emptypage\listoffigures
 
