--- a/preamble.sty
+++ b/preamble.sty
@@ -23,6 +23,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
+\renewcommand{\headrulewidth}{0pt}
 \lhead{\small A Study on Superlight Clients under Velvet Fork}
 \lfoot{\small A. Polydouri \hspace{0.9cm} p. \thepage}
 
