--- a/preamble.sty
+++ b/preamble.sty
@@ -8,6 +8,7 @@
 %\usepackage[LGR,T1]{fontenc}
 %\usepackage{uarial}
 %\renewcommand{\familydefault}{\sfdefault}
+\usepackage[document]{ragged2e}
 
 \usepackage{xltxtra}
 \usepackage{polyglossia}
@@ -25,7 +26,7 @@
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
 \lhead{\small A Study on Superlight Clients under Velvet Fork}
-\lfoot{\small A. Polydouri \hspace{0.9cm} p. \thepage}
+\lfoot{\flushleft{\small A. Polydouri} \hspace{0.9cm} \flushright{\thepage}}
 
 \usepackage{titlesec, blindtext}
 \newcommand{\hsp}{\hspace{20pt}}
