--- a/preamble.sty
+++ b/preamble.sty
@@ -8,7 +8,6 @@
 %\usepackage[LGR,T1]{fontenc}
 %\usepackage{uarial}
 %\renewcommand{\familydefault}{\sfdefault}
-\usepackage[document]{ragged2e}
 
 \usepackage{xltxtra}
 \usepackage{polyglossia}
@@ -26,11 +25,17 @@
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
 \lhead{\small A Study on Superlight Clients under Velvet Fork}
-\lfoot{\flushleft{\small A. Polydouri} \hspace{0.9cm} \flushright{\thepage}}
+\lfoot{\small A. Polydouri} 
+\rfoot{\thepage}
 
 \usepackage{titlesec, blindtext}
-\newcommand{\hsp}{\hspace{20pt}}
-\titleformat{\chapter}[hang]{\Huge\bfseries}{\thechapter{.}\hsp}{0pt}{\Huge\bfseries\MakeUppercase}
+\newcommand{\hsp}{\hspace{15pt}}
+\titleformat{\chapter}[hang]{\centering\Large\bfseries}{\thechapter{.}\hsp}{0pt}{\Large\bfseries\MakeUppercase}
+\titleformat*{\section}{\large\bfseries}
+
+\fancypagestyle{plain}{%
+\fancyfoot[LE, RO]{\thepage}
+\fancyfoot[LO, RE]{\small A. Polydouri}}
 
 \usepackage{caption}
 \captionsetup[figure]{font=small,labelfont=bf,textfont={bf,bf}}
