Font 10 in subtitle pages

--- a/greek_subtitle.tex
+++ b/greek_subtitle.tex
@@ -1,11 +1,12 @@
 \begin{center}
+\begin{footnotesize}
     \vspace{3cm}
-    \large \textbf{ΔΙΠΛΩΜΑΤΙΚH ΕΡΓΑΣIΑ}\\
+    \textbf{ΔΙΠΛΩΜΑΤΙΚH ΕΡΓΑΣIΑ}\\
     \vspace{3cm}
     Υπερελαφρείς Πελάτες Αλυσίδας υπό \\
     ``Βελούδινη'' Αναβάθμιση Πρωτοκόλλου\\
     \vspace{3cm}
-    \large \textbf{Ανδριάννα I. Πολυδούρη}\\
+    \textbf{Ανδριάννα I. Πολυδούρη}\\
     \textbf{Αρ. Μητρώου:} M1598
  
     \begin{flushleft}
@@ -26,6 +27,8 @@
         \textbf{Γιάννης Σμαραγδάκης}, Καθηγητής ΕΚΠΑ
 
     \end{flushleft}
+
+\end{footnotesize}
 \end{center}
 
 
