--- a/subtitle.tex
+++ b/subtitle.tex
@@ -1,10 +1,11 @@
 \begin{center}
+\begin{footnotesize}
     \vspace{3cm}
-    \large \textbf{MASTER THESIS}\\
+    \textbf{MASTER THESIS}\\
     \vspace{3cm}
     A Study on Superlight Blockchain Clients under Velvet Fork\\
     \vspace{3cm}
-    \large \textbf{Andrianna I. Polydouri}\\
+    \textbf{Andrianna I. Polydouri}\\
     \textbf{Reg.Nr.:} M1598
  
     \begin{flushleft}
@@ -25,6 +26,7 @@
         \textbf{Yannis Smaragdakis}, Professor NKUA
 
     \end{flushleft}
+\end{footnotesize}
 \end{center}
 
 
