--- a/preamble.sty
+++ b/preamble.sty
@@ -24,9 +24,9 @@
 \pagestyle{fancy}
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
-\lhead{\small A Study on Superlight Clients under Velvet Fork}
-\lfoot{\small A. Polydouri} 
-\rfoot{\thepage}
+\lhead{\scriptsize A Study on Superlight Clients under Velvet Fork}
+\lfoot{\scriptsize A. Polydouri} 
+\rfoot{\scriptsize \thepage}
 
 \usepackage{titlesec, blindtext}
 \newcommand{\hsp}{\hspace{15pt}}
@@ -34,8 +34,8 @@
 \titleformat*{\section}{\large\bfseries}
 
 \fancypagestyle{plain}{%
-\fancyfoot[LE, RO]{\thepage}
-\fancyfoot[LO, RE]{\small A. Polydouri}}
+\fancyfoot[LE, RO]{\scriptsize \thepage}
+\fancyfoot[LO, RE]{\scriptsize A. Polydouri}}
 
 \usepackage{caption}
 \captionsetup[figure]{font=small,labelfont=bf,textfont={bf,bf}}
