Centering of captions

--- a/preamble.sty
+++ b/preamble.sty
@@ -39,7 +39,8 @@
 \fancyfoot[LO, RE]{\scriptsize A. Polydouri}}
 
 \usepackage{caption}
-\captionsetup[figure]{font=small,labelfont=bf,textfont={bf,bf}}
+\captionsetup[figure]{font=footnotesize,labelfont=bf,textfont={bf,bf}, justification=centering}
+\captionsetup[table]{font=footnotesize,labelfont=bf,textfont={bf,bf}, justification=centering}
 
 \usepackage{import}
 
