Remove list of figures from contents

--- a/thesis.tex
+++ b/thesis.tex
@@ -22,7 +22,7 @@
 \emptypage\tableofcontents
 
 \def\listfigurename{\textsc{List of Figures}}
-\addcontentsline{toc}{chapter}{\listfigurename}
+%\addcontentsline{toc}{chapter}{\listfigurename}
 \emptypage\listoffigures
 
 \pagestyle{fancy}
