Set bibliography font size to 10pt

--- a/thesis.tex
+++ b/thesis.tex
@@ -31,6 +31,6 @@
 \cleardoublepage
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliographystyle{plain}
-\bibliography{refs}
+{\footnotesize \bibliography{refs}}
 
 \end{document}
