--- a/preamble.sty
+++ b/preamble.sty
@@ -17,6 +17,19 @@
 \newfontfamily\greekfontsf{Linux Libertine O}
 \usepackage{alphabeta}
 
+%%%%%%  toc formatting %%%%%%% 
+\usepackage{tocloft}
+
+\cftsetindents{section}{0em}{2em}
+\cftsetindents{subsection}{2em}{3em}
+
+\renewcommand{\cftsecfont}{\bfseries \footnotesize}
+\renewcommand{\cftsubsecfont}{\footnotesize}
+
+\renewcommand\cfttoctitlefont{\hfill\Large\bfseries}
+\renewcommand\cftaftertoctitle{\hfill\mbox{}}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \setlength{\parindent}{0em}
 \setlength{\parskip}{0.5em}
 
