--- a/subtitle.tex
+++ b/subtitle.tex
@@ -1,5 +1,5 @@
 \begin{center}
-\begin{footnotesize}
+\begin{normalsize}
     \vspace{3cm}
     \textbf{MASTER THESIS}\\
     \vspace{3cm}
@@ -26,7 +26,7 @@
         \textbf{Yannis Smaragdakis}, Professor NKUA
 
     \end{flushleft}
-\end{footnotesize}
+\end{normalsize}
 \end{center}
 
 
