--- a/thesis.tex
+++ b/thesis.tex
@@ -19,10 +19,10 @@
 \import{chapters/abstract}{abstract.tex}
 \import{chapters/acknowledgements}{acknowledgements.tex}
 
+\renewcommand{\contentsname}{CONTENTS}
 \emptypage\tableofcontents
 
-\def\listfigurename{\textsc{List of Figures}}
-%\addcontentsline{toc}{chapter}{\listfigurename}
+\def\listfigurename{\textsc{LIST OF FIGURES}}
 \emptypage\listoffigures
 
 \pagestyle{fancy}
