Greek subtitle to 12pt

--- a/greek_subtitle.tex
+++ b/greek_subtitle.tex
@@ -1,5 +1,5 @@
 \begin{center}
-\begin{footnotesize}
+\begin{normalsize}
     \vspace{3cm}
     \textbf{ΔΙΠΛΩΜΑΤΙΚH ΕΡΓΑΣIΑ}\\
     \vspace{3cm}
@@ -28,7 +28,7 @@
 
     \end{flushleft}
 
-\end{footnotesize}
+\end{normalsize}
 \end{center}
 
 
